--- a/Select/index.html
+++ b/Select/index.html
@@ -13,13 +13,17 @@
 			height: 100px;
 			margin-top:400px;
 		}
+		.tip{
+		    color: #888;
+		    font-family: '微软雅黑';
+		    margin: 40px;
+		}
 	</style>
 </head>
 <body>
+	<span class="tip">可搜索下拉框。根据当前搜索框高度，增加窗体高度</span>
 	<div id="root">
 		
 	</div>
-	<input id="btnPopup" class="ipt" type="button" value="弹个窗呗！大爷">
-	<div id="popup" class="popup"></div>
 </body>
 </html>
